Fix footer on smaller screens

--- a/themes/mytheme/assets/css/main.sass
+++ b/themes/mytheme/assets/css/main.sass
@@ -660,10 +660,12 @@ figure
 //Footer
 .footer
     width: 100%
-    margin: $lh auto
+    margin: $halflh auto
+    margin-top: $lh
     text-align: center
     p
-        margin: 0
+        margin: unset
+        padding: 0 1rem
         color: $subtextcolor
         font-size: 0.8rem
         a
